--- a/src/main/resources/static/vulnerabilities.html
+++ b/src/main/resources/static/vulnerabilities.html
@@ -350,14 +350,15 @@
                     ],
                     "messages": {},
                     "perPageField": "pageSize",
-                    "perPage": 100,
+                    "perPage": 20,
                     "filter": {
                         "title": "查询条件",
+                        "submitText": "查询",
                         "body": [
                             {
                                 "type": "input-text",
                                 "name": "name",
-                                "label": "name"
+                                "label": "漏洞名称"
                             },
                             {
                                 "type": "input-text",
